download train/val data

--- a/ImageCaptioning/ImageCaptioning.ipynb
+++ b/ImageCaptioning/ImageCaptioning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,10 +37,7 @@
     "    with zipfile.ZipFile(zip_path, \"r\") as f:\n",
     "        for name in tqdm(iterable=f.namelist(), total=len(f.namelist())):\n",
     "            # f.extract(member=name, path=\"data_dir\")\n",
-    "            f.extract(member=name, path=download_path)\n",
-    "\n",
-    "\n",
-    "download_data(\"http://images.cocodataset.org/annotations/annotations_trainval2014.zip\")"
+    "            f.extract(member=name, path=download_path)"
    ]
   },
   {
@@ -49,14 +46,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "download_data(\"http://images.cocodataset.org/annotations/annotations_trainval2014.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://images.cocodataset.org/zips/train2014.zip 다운로드 중 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "train2014.zip: 13.5GB [11:02:06, 340kB/s]                              \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "압축을 푸는 중 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 82784/82784 [05:36<00:00, 245.85it/s]\n"
+     ]
+    }
+   ],
+   "source": [
     "download_data(\"http://images.cocodataset.org/zips/train2014.zip\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://images.cocodataset.org/zips/val2014.zip 다운로드 중 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "val2014.zip: 6.65GB [5:18:23, 348kB/s]                               \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "압축을 푸는 중 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 40505/40505 [02:15<00:00, 299.69it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "download_data(\"http://images.cocodataset.org/zips/val2014.zip\")"
    ]
